force-app/main/default/objects/ProjectTeamApprover__c/ProjectTeamApprover__c.object-meta.xml
<CustomObject>
    <label>Project Team Approver Setup</label>
    <nameField>
        <displayFormat>PTAN-{000000}</displayFormat>
        <label>Project Team Approvers Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Approvers Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>