force-app/main/default/objects/ProjectTeamApprover__c/fields/AgencyAccount__c.field-meta.xml
<CustomField>
    <fullName>AgencyAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Agency Account, to which Requestor belongs</inlineHelpText>
    <label>Agency Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AgecnyAccount</relationshipName>
    <type>Lookup</type>
</CustomField>