force-app/main/default/objects/ProjectTeamApprover__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rule to check if the specified user is Requestor</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requestor</relationshipName>
    <type>Lookup</type>
</CustomField>