force-app/main/default/objects/ProjectTeamApprover__c/fields/RequestorRole__c.field-meta.xml
<CustomField>
    <fullName>RequestorRole__c</fullName>
    <label>Requestor Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>National Account Manager</fullName>
            </value>
            <value>
                <fullName>National Project Manager</fullName>
            </value>
            <value>
                <fullName>Regional Project Manager</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>Vertical Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>