force-app/main/default/objects/ProjectTeamApprover__c/fields/X1stLevelApprover__c.field-meta.xml
<CustomField>
    <fullName>X1stLevelApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>1st Level Approver</inlineHelpText>
    <label>1st Level Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X1stLevelApprover</relationshipName>
    <type>Lookup</type>
</CustomField>