force-app/main/default/objects/ProjectTeamApprover__c/fields/X1stLevelBackupApprover__c.field-meta.xml
<CustomField>
    <fullName>X1stLevelBackupApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Level Backup Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X1stLevelBackupApprover</relationshipName>
    <type>Lookup</type>
</CustomField>