force-app/main/default/objects/ProjectTeamApprover__c/fields/X2ndLevelApprover__c.field-meta.xml
<CustomField>
    <fullName>X2ndLevelApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Level Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X2ndLevelApprover</relationshipName>
    <type>Lookup</type>
</CustomField>