force-app/main/default/objects/ProjectTeamApprover__c/fields/X2ndLevelBackupApprover__c.field-meta.xml
<CustomField>
    <fullName>X2ndLevelBackupApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Level Backup Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X2ndLevelBackupApprover</relationshipName>
    <type>Lookup</type>
</CustomField>