force-app/main/default/objects/ProjectTeamApprover__c/fields/X2ndLevelBackupApproverTeamRole__c.field-meta.xml
<CustomField>
    <fullName>X2ndLevelBackupApproverTeamRole__c</fullName>
    <inlineHelpText>Role of the Member who will be approving the record and added as Team Member</inlineHelpText>
    <label>2nd Level Backup Approver Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Approver</fullName>
            </value>
            <value>
                <fullName>Sales Support Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>