force-app/main/default/objects/ProjectTeamApprover__c/fields/X3rdLevelApprover__c.field-meta.xml
<CustomField>
    <fullName>X3rdLevelApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Level Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X3rdLevelApprover</relationshipName>
    <type>Lookup</type>
</CustomField>