force-app/main/default/objects/ProjectTeamApprover__c/fields/X3rdLevelBackupApprover__c.field-meta.xml
<CustomField>
    <fullName>X3rdLevelBackupApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Level Backup Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X3rdLevelBackupApprover</relationshipName>
    <type>Lookup</type>
</CustomField>