force-app/main/default/objects/ProjectTeamApprover__c/fields/X3rdLevelBackupApproverTeamRole__c.field-meta.xml
<CustomField>
    <fullName>X3rdLevelBackupApproverTeamRole__c</fullName>
    <label>3rd Level Backup Approver Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Approver</fullName>
            </value>
            <value>
                <fullName>Sales Support Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>