force-app/main/default/objects/ProjectTeamApprover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Requestor__c</columns>
    <columns>X1stLevelApprover__c</columns>
    <columns>X1stLevelBackupApprover__c</columns>
    <columns>X1stLevelApproverTeamRole__c</columns>
    <columns>X2ndLevelApprover__c</columns>
    <columns>X2ndLevelApproverTeamRole__c</columns>
    <columns>X3rdLevelApprover__c</columns>
    <columns>X3rdLevelApproverTeamRole__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>