force-app/main/default/objects/ProjectTeamApprover__c/listViews/Generic.listView-meta.xml
<ListView>
    <fullName>Generic</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>X1stLevelApprover__c</columns>
    <columns>X1stLevelApproverTeamRole__c</columns>
    <columns>X1stLevelBackupApprover__c</columns>
    <columns>X1stLevelBackupApproverTeamRole__c</columns>
    <columns>X2ndLevelApprover__c</columns>
    <columns>X2ndLevelApproverTeamRole__c</columns>
    <columns>X2ndLevelBackupApprover__c</columns>
    <columns>X2ndLevelBackupApproverTeamRole__c</columns>
    <columns>X3rdLevelApprover__c</columns>
    <columns>X3rdLevelApproverTeamRole__c</columns>
    <columns>X3rdLevelBackupApprover__c</columns>
    <columns>X3rdLevelBackupApproverTeamRole__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RequestorType__c</field>
        <operation>equals</operation>
        <value>Generic</value>
    </filters>
    <label>Generic</label>
</ListView>