force-app/main/default/objects/ProjectTeamApprover__c/listViews/Southwest.listView-meta.xml
<ListView>
    <fullName>Southwest</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Requestor__c</columns>
    <columns>X1stLevelApprover__c</columns>
    <columns>X1stLevelBackupApprover__c</columns>
    <columns>X1stLevelApproverTeamRole__c</columns>
    <columns>X2ndLevelApprover__c</columns>
    <columns>X2ndLevelApproverTeamRole__c</columns>
    <columns>X3rdLevelApprover__c</columns>
    <columns>X3rdLevelApproverTeamRole__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Southwest</value>
    </filters>
    <label>Southwest</label>
</ListView>